@@ -25,7 +25,7 @@
 .\" THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 .\" OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-.Dd July 2, 2015
+.Dd July 3, 2015
 .Dt KYUAFILE 5
 .Os
 .Sh NAME
@@ -151,6 +151,19 @@ architecture.
 Whitespace-separated list of machine platform names allowed by the test.
 If empty or not defined, the test is allowed to run on any machine
 platform.
+.It Va custom.NAME
+Custom variable defined by the test where
+.Sq NAME
+denotes the name of the variable.  These variables are useful to tag your
+tests with information specific to your project.  The values of such
+variables are propagated all the way from the tests to the results files
+and later to any generated reports.
+.Pp
+Note that if the name happens to have dashes or any other special
+characters in it, you will have to use a special Lua syntax to define the
+property.  Refer to the
+.Sx EXAMPLES
+section below for clarification.
 .It Va description
 Textual description of the test.
 .It Va is_exclusive
@@ -185,10 +198,6 @@ If set to
 the test must run as root.
 .It Va timeout
 Amount of seconds that the test is allowed to execute before being killed.
-.It Va X-NAME
-Custom variable defined by the test, where
-.Sq NAME
-denotes the name of the variable.
 .El
 .Ss Recursion
 To reference test programs in another subdirectory, a different
@@ -323,6 +332,18 @@ tap_test_program{name='privileged_test',
 
 include('module-1/Kyuafile')
 include('module-2/Kyuafile')
+.Ed
+.Pp
+The syntax to define custom properties may be not obvious if their names
+have any characters that make the property name not be a valid Lua identifier.
+Dashes are just one example.  To set such properties, do something like this:
+.Bd -literal -offset indent
+syntax(2)
+
+test_suite('FreeBSD')
+
+plain_test_program{name='the_test',
+                   ['custom.FreeBSD-Bug-Id']='category/12345'}
 .Ed
 .Ss Connecting disjoint test suites
 Now suppose you had various test suites on your file system and you would
