@@ -81,9 +81,9 @@ ATF_TEST_CASE_BODY(parse_atf_metadata__override_all)
         .add_allowed_architecture("i386")
         .add_allowed_architecture("x86_64")
         .add_allowed_platform("amd64")
-        .add_custom("X-foo", "value1")
-        .add_custom("X-bar", "value2")
-        .add_custom("X-baz-www", "value3")
+        .add_custom("foo", "value1")
+        .add_custom("bar", "value2")
+        .add_custom("baz-www", "value3")
         .add_required_config("var1")
         .add_required_config("var2")
         .add_required_config("var3")
