@@ -116,8 +116,8 @@ ATF_TEST_CASE_BODY(get_put_test_case__ok)
         .add_allowed_architecture("x86_64")
         .add_allowed_platform("amd64")
         .add_allowed_platform("macppc")
-        .add_custom("X-user1", "value1")
-        .add_custom("X-user2", "value2")
+        .add_custom("user1", "value1")
+        .add_custom("user2", "value2")
         .add_required_config("var1")
         .add_required_config("var2")
         .add_required_config("var3")
